# gitglow

./: .gitignore  CMakeLists.txt  README.md  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
build_configs/: esp32.cmake  raspberry_pi.cmake
docs/: architecture.md
src/gitglow/: __init__.py  main.py
src/gitglow/config/: settings.py
src/interfaces/: IMatrixWriter.h  IPlatform.h
